force-app/main/default/objects/DHS_DataLoad_Activity__c/fields/Activity_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_User_Name__c</fullName>
    <formula>DHS_Activity_User__r.FirstName + &apos; &apos; +  DHS_Activity_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity User Name</label>
    <type>Text</type>
</CustomField>