force-app/main/default/objects/DHS_DataLoad_Activity__c/fields/DHS_Activity_User__c.field-meta.xml
<CustomField>
    <fullName>DHS_Activity_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DHS_DataLoad_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>