force-app/main/default/objects/DHS_DataLoad_Activity__c/fields/Job_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Time__c</fullName>
    <label>Job Start Time</label>
    <type>DateTime</type>
</CustomField>