force-app/main/default/objects/DHS_DataLoad_Activity__c/listViews/DHS_All1.listView-meta.xml
<ListView>
    <fullName>DHS_All1</fullName>
    <columns>NAME</columns>
    <columns>DHS_Activity_User__c</columns>
    <columns>Job_Start_Time__c</columns>
    <columns>Job_End_Time__c</columns>
    <columns>Total_Record_Count__c</columns>
    <columns>Success_Count__c</columns>
    <columns>Failure_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>DHS_All</label>
</ListView>